# mbpoll

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README  README-WINDOWS.md  README.md  README_FR.md  cmake_uninstall.cmake.in  mbpoll-config.h  mbpoll.pro  mbpoll.project  mbpoll.workspace  package_description.txt  version-git.h  version-git.h.in
cmake/: GitVersion.cmake
contrib/: _mbpoll  mbpoll.bash
package/win/: license.rtf  license.txt  mbpoll.iss
src/: Makefile  RtsPin.cpp  config.h  custom-rts.c  custom-rts.h  mbpoll-gpio-rts.h  mbpoll.c  serial.c  serial.h
test/integration/: stream.t  usage.t
